事前検証記載

--- a/articles/bd99879654d1ca.md
+++ b/articles/bd99879654d1ca.md
@@ -1,20 +1,107 @@
 ---
-title: "コンテナイメージのレイヤーからファイルを回収する方法"
+title: "【TIPS】コンテナイメージのレイヤーからファイルを回収する方法"
 emoji: "🐳"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: [Docker]
 published: false
 ---
 
 # コンテナイメージのレイヤーからファイルを回収する方法
 
-コンテナイメージのビルド時にCOPYしてから削除したファイルをコンテナイメージから取り出したくなったことはないでしょうか？私はあります。[^1]
+コンテナイメージのビルド時に一度COPYし、後の命令で削除したファイルを、しばらく後になってコンテナイメージから取り出したくなったことはないでしょうか？私はあります。[^1]
 
-[^1]Gitで管理していない証明書をコンテナに配置し、コンテナ内のキーストア格納後に消去していたのですが、コンテナを作り直す際にその証明書の原本が見つからないという経験があります。
+[^1]: 先人がイメージを作った際にGitで管理していない証明書をコンテナに配置し、コンテナ内のキーストア格納後に証明書をイメージから消去していたのですが、コンテナを作り直す際にその証明書の原本が見つからなかったという経験があります。
 
 こんな時、ビルド済みのコンテナイメージからファイルを回収できる可能性があります。この記事ではコンテナのlayerからファイルを回収する手法について記載します。
 
 ## 結論
+
 コンテナイメージビルド時にファイルをコピーする操作と削除する操作が別々のlayerとなっている場合、イメージをアーカイブ形式で出力してあげることでファイルを取り出すことが可能です。
 
-## 
+## コンテナイメージの構造について
+
+いろいろなところで解説されているので少しの概要だけ記載します。
+コンテナイメージはlayerと呼ばれるファイルシステムを重ね合わせる（積み上げる）ことで作られます。Dockerfileの命令ごとに新しいlayerが作られ、そこではファイルの追加・変更・削除などの処理が発生します。
+積み上げられたlayerは下位のlayerのファイルを継承します。つまり、上位のlayerは下位のlayerに対する差分を表すファイルシステムとなります。
+最終的には基となったimageに対する差分の集合が新しいイメージとなります。
+
+## 検証
+
+### シナリオ
+
+今回は以下のケースを想定して検証します。
+
+- AlmaLinux 9.6のコンテナイメージに対して自己署名証明書を登録したコンテナイメージから自己署名証明書を取り出す。
+- 自己署名証明書はCOPY命令でコンテナイメージに組み込まれている。
+
+### コンテナイメージ作成
+
+1. 自己署名証明書作成
+
+次のコマンドで256 ビットの楕円曲線デジタル署名アルゴリズム (ECDSA) キーと、その鍵で署名された自己署名証明書を作成します。
+証明書作成時の質問には適当に回答しています。
+
+```
+$ openssl genpkey -algorithm ec -pkeyopt ec_paramgen_curve:P-256 -out private.key
+$ openssl req -key private.key -new -x509 -days 3650 -out server.crt
+You are about to be asked to enter information that will be incorporated
+into your certificate request.
+What you are about to enter is what is called a Distinguished Name or a DN.
+There are quite a few fields but you can leave some blank
+For some fields there will be a default value,
+If you enter '.', the field will be left blank.
+-----
+Country Name (2 letter code) [XX]:JA
+State or Province Name (full name) []:Tokyo
+Locality Name (eg, city) [Default City]:Tokyo
+Organization Name (eg, company) [Default Company Ltd]:Hoge
+Organizational Unit Name (eg, section) []:Fuga
+Common Name (eg, your name or your server's hostname) []:Test For Container Layer
+Email Address []:
+```
+
+2. Dockerfileの用意
+
+次に、以下のDockerfileを用意します。
+```
+FROM almalinux:9.6-minimal
+COPY server.crt /tmp/server.crt
+RUN trust anchor /tmp/server.crt && rm /tmp/server.crt
+```
+
+Dockerfileと同じディレクトリに先ほど作成したserver.crtという自己署名証明書を配置しておきます。
+
+
+3. コンテナイメージのビルド
+
+イメージ名は```test-file1```で作成しました。
+```
+$ docker build -t test-file1 .
+```
+
+### コンテナの確認
+
+証明書がインストールされていることと、コンテナ内の/tmp/配下にserver.crtが存在しないことを確認します。
+
+ホストサーバーで以下のコマンドを実行
+```
+$ docker run -it test-file1:latest /bin/bash
+```
+コンテナに入れるので、以下を実行
+```
+# ls /tmp/
+```
+⇒何もなし
+
+```
+# trust list | grep -C 3 "Test For Container Layer"
+pkcs11:id=%6E%6B%7C%89%F1%C1%AF%A1%8C%32%2E%ED%EE%B9%77%F6%75%DB%E6%EE;type=cert
+    type: certificate
+    label: Test For Container Layer
+    trust: anchor
+    category: authority
+```
+⇒証明書インストール済み
+
+### コンテナイメージからファイルの取り出し
+本題に入ります。
